--- a/snake.css
+++ b/snake.css
@@ -17,12 +17,35 @@ h1 {
 
 .snake {
   background-color: black;
+  border-radius: 25%;
 }
 
 .ghost {
   background-color: gray;
 }
 
+#scoreBoard {
+  width: 150px;
+  margin: 0 auto;
+  border: 1px solid black;
+  text-align: center;
+}
+
 .food {
-  background-color: rgb(93, 93, 253);
+  animation-name: food;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-direction: forwards;
+  animation-fill-mode: red;
+  background-color: red;
+  border-radius: 50%;
+}
+
+@keyframes food {
+  from {
+    box-shadow: 0px 0px 1px 1px red; 
+  }
+  to {
+    box-shadow: 0px 0px 3px 3px red;
+  }
 }
