--- a/snake.css
+++ b/snake.css
@@ -49,3 +49,10 @@ h1 {
     box-shadow: 0px 0px 3px 3px red;
   }
 }
+
+.gameOver {
+  margin: 0 auto;
+  font-size: 40px;
+  text-align: center;
+  padding-top: 50px;
+}
