--- a/snake.css
+++ b/snake.css
@@ -3,6 +3,7 @@ h1 {
 }
 
 #grid {
+  overflow: hidden;
   width: 800px;
   display: flex;
   margin: 0 auto;
@@ -22,6 +23,7 @@ h1 {
 
 .ghost {
   background-color: gray;
+  border-radius: 25%;
 }
 
 #scoreBoard {
